--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <legend>Monstrinho</legend>
           <div>
             <label for="nome">Nome:</label>
-            <input name="nome" type="text" required/>
+            <input name="nome" type="text" pattern="[A-Za-z]{1,}" required/>
           </div>
           <div>
             <label for="num_pedras">Nº de pedras:</label>
